cmake_minimum_required(VERSION 3.19)
project(c_postgraduate)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
include_directories(.)

add_executable(Hello Hello.cpp)

add_executable(test test.cpp)

add_executable(2.18 2/2.18.cpp)
add_executable(2.28 2/2.28.cpp)
add_executable(2.29 2/2.29.cpp)
add_executable(2.30 2/2.30.cpp)
add_executable(2.31 2/2.31.cpp)
add_executable(2.33 2/2.33.cpp)
add_executable(2.34 2/2.34.cpp)
add_executable(2.35 2/2.35.cpp)
add_executable(2.37 2/2.37.cpp)
add_executable(3.7 3/3.7.cpp)
add_executable(3.8 3/3.8.cpp)
add_executable(3.9 3/3.9.cpp)
add_executable(3.10 3/3.10.cpp)
add_executable(3.12 3/3.12.cpp)
add_executable(3.13 3/3.13.cpp)
add_executable(3.14 3/3.14.cpp)
add_executable(3.15 3/3.15.cpp)