cmake_minimum_required(VERSION 3.19)
project(c_postgraduate)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
include_directories(.)

add_executable(Hello Hello.cpp)

add_executable(test test.cpp)

add_executable(2.18 2/2.18.cpp)
add_executable(2.28 2/2.28.cpp)
add_executable(2.29 2/2.29.cpp)
add_executable(2.30 2/2.30.cpp)
add_executable(2.31 2/2.31.cpp)
add_executable(2.33 2/2.33.cpp)
add_executable(2.34 2/2.34.cpp)
add_executable(2.35 2/2.35.cpp)
add_executable(2.37 2/2.37.cpp)
add_executable(3.7 3/3.7.cpp)
add_executable(3.8 3/3.8.cpp)
add_executable(3.9 3/3.9.cpp)
add_executable(3.10 3/3.10.cpp)
add_executable(3.12 3/3.12.cpp)
add_executable(3.13 3/3.13.cpp)
add_executable(3.14 3/3.14.cpp)
add_executable(3.15 3/3.15.cpp)
add_executable(4.8 4/4.8.cpp)
add_executable(4.9 4/4.9.cpp)
add_executable(4.10 4/4.10.cpp)
add_executable(4.11 4/4.11.cpp)
add_executable(4.12 4/4.12.cpp)
add_executable(4.13 4/4.13.cpp)
add_executable(4.14 4/4.14.cpp)
add_executable(5.3 5/5.3.cpp)
add_executable(5.11 5/5.11.cpp)
add_executable(5.7 5/5.7.cpp)
add_executable(5.12 5/5.12.cpp)
add_executable(5.13 5/5.13.cpp)
add_executable(5.14 5/5.14.cpp)
add_executable(6.9 6/6.9.cpp)
add_executable(6.10 6/6.10.cpp)
add_executable(6.16 6/6.16.cpp)
add_executable(6.20 6/6.20.cpp)
add_executable(6.21 6/6.21.cpp)
add_executable(6.22 6/6.22.cpp)
add_executable(6.23 6/6.23.cpp)
add_executable(6.24 6/6.24.cpp)
add_executable(6.25 6/6.25.cpp)
add_executable(6.26 6/6.26.cpp)
add_executable(6.27 6/6.27.cpp)
add_executable(6.28 6/6.28.cpp)
add_executable(7.5 7/7.5.cpp)
add_executable(7.6 7/7.6.cpp)
add_executable(7.8 7/7.8.cpp)
add_executable(7.9 7/7.9.cpp)
add_executable(7.10 7/7.10.cpp)
add_executable(7.11 7/7.11.cpp)
add_executable(8.5 8/8.5.cpp)
add_executable(8.6 8/8.6.cpp)
add_executable(8.7 8/8.7.cpp)
add_executable(8.8 8/8.8.cpp)
add_executable(8.9 8/8.9.cpp)
add_executable(8.10 8/8.10.cpp)
add_executable(8.11 8/8.11.cpp)
add_executable(8.12 8/8.12.cpp)
add_executable(8.13 8/8.13.cpp)
add_executable(11.3 11/11.3.cpp)
add_executable(11.4 11/11.4.cpp)
add_executable(11.5 11/11.5.cpp)
add_executable(11.6 11/11.6.cpp)
add_executable(11.8 11/11.8.cpp)
add_executable(11.9 11/11.9.cpp)